# azure-speech-sdk-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  readme.md
.github/workflows/: build.yml  release.yml
examples/: read_from_wav_file.rs  recognize_callbacks.rs  recognize_from_bbc_word_radio.rs  recognize_from_file.rs  recognize_from_microphone.rs  recognize_from_stream.rs  recognize_from_wav_file.rs  recognize_simple.rs  synthesize_callbacks.rs  synthesize_simple.rs  synthesize_to_output.rs  synthesize_to_standard_output.rs  synthesize_using_ssml.rs  test_azure_speech.rs
src/: auth.rs  callback.rs  config.rs  error.rs  errors.rs  event.rs  iterator_ext.rs  lib.rs  message.rs  stream_ext.rs  utils.rs
src/connector/: client.rs  message.rs  mod.rs  utils.rs
src/recognizer/: audio_format.rs  callback.rs  client.rs  config.rs  content_type.rs  event.rs  language.rs  mod.rs  session.rs  source.rs  utils.rs
src/recognizer/message/: common.rs  mod.rs  speech_end_detected.rs  speech_hypothesis.rs  speech_phrase.rs  speech_start_detected.rs
src/recognizer/speech/: mod.rs
src/speech_to_text/: client.rs  config.rs  connector.rs  mod.rs  recognizer.rs  traits.rs  utils.rs
src/speech_to_text/event/: cancelled.rs  mod.rs
src/speech_to_text/request/: mod.rs  speech_config.rs  speech_context.rs
src/speech_to_text/response/: mod.rs  speech_end.rs  speech_hypothesis.rs  speech_phrase.rs  speech_start.rs  turn_start.rs
src/speech_to_text/source/: mod.rs
src/speech_to_text/speech/: event.rs  mod.rs
src/synthesizer/: audio_format.rs  callback.rs  client.rs  config.rs  event.rs  language.rs  mod.rs  session.rs  utils.rs  voice.rs
src/synthesizer/message/: metadata.rs  mod.rs  response.rs  turn_start.rs
src/synthesizer/ssml/: language.rs  mod.rs  speak.rs  voice.rs
tests/: recognizer.rs  synthesizer.rs
tests/common/: mod.rs
