[package]
name = "azure-speech"
version = "0.2.2"
authors = ["Jure Bernava Prah <webjure@gmail.com>"]
description = "Pure Rust implementation for Microsoft Speech Service"
edition = "2021"
rust-version = "1.71.0"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/jbernavaprah/azure-speech-sdk-rs"
homepage = "https://github.com/jbernavaprah/azure-speech-sdk-rs"
include = [
    "Cargo.toml",
    "readme.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/*",
    "doc/*",
]
categories = ["multimedia", "multimedia::audio", "text-processing"]
keywords = [
    "azure-speech",
    "sdk",
    "cognitive",
    "recognition",
    "synthesizing"
]

[dependencies]
tokio = { version = "=1.38", features = ["sync"] }
tracing = "0.1"
ezsockets = { version = "0.6", features = ["native-tls", "native_client"] }
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
pin-project-lite = "0.2.14"

url = { version = "2", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
os_info = "3"

ssml = "0.1.0"
async-channel = "1.9.0"


[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }

rodio = { version = "0.19.0", features = ["symphonia", "symphonia-wav", "symphonia-mp3"], default-features = false }

hound = "3.5"
cpal = "0.15.3"

reqwest = { version = "0.12", features = ["stream"] }
iobuffer = "0.2.0"
tokio-util = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
