[package]
name = "azure-speech"
version = "0.7.0"
authors = ["Jure Bernava Prah <webjure@gmail.com>"]
description = "Pure Rust SDK for Azure Speech Service"
edition = "2021"
rust-version = "1.71.0"
license = "MIT"
readme = "readme.md"
repository = "https://github.com/jbernavaprah/azure-speech-sdk-rs"
homepage = "https://github.com/jbernavaprah/azure-speech-sdk-rs"
include = [
    "Cargo.toml",
    "readme.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/*",
    "doc/*",
]
categories = ["multimedia", "multimedia::audio", "text-processing"]
keywords = [
    "azure-speech",
    "sdk",
    "cognitive",
    "recognition",
    "synthesizing"
]

[dependencies]
tokio = { version = "1.40", features = ["sync", "macros", "rt", "fs"] }
tracing = { version = "0.1", default-features = false }
tokio-websockets = { version = "0.11.3", features = ["client",] }
futures-util = { version = "0.3", default-features = false, features = ["std", "sink"] }
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
pin-project-lite = "0.2.14"

url = { version = "2", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
os_info = "3"

ssml = "0.2"

[features]
default = ["tws-rustls-native-roots", "tws-rand", "tws-smol-sha1"]
tws-rustls-native-roots = ["tokio-websockets/rustls-webpki-roots", "tokio-websockets/ring"]
tws-rustls-webpki-roots = ["tokio-websockets/rustls-native-roots", "tokio-websockets/ring"]
tws-native-tls = ["tokio-websockets/native-tls"]
tws-smol-sha1 = ["tokio-websockets/sha1_smol"]
tws-fastrand = ["tokio-websockets/fastrand"]
tws-rand = ["tokio-websockets/rand"]

[dev-dependencies]

tokio-websockets = { version = "0.11.3", features = ["server"] }
http = "1.1.0"

tokio = { version = "1.36.0", features = ["full"] }

rodio = { version = "0.20.1", features = ["symphonia", "symphonia-wav", "symphonia-mp3"], default-features = false }
cpal = "0.15.3"

reqwest = { version = "0.12", features = ["stream"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
